tests/snapshots/snapshots__pipeline@rowcapture.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/rowcapture.pr
---
== tokens ==
VOpen Fn Ident("apply_io") LParen Ident("g") Colon LParen KwInt RParen Arrow KwInt Bang LBrace UIdent("IO") RBrace RParen Colon KwInt Bang LBrace UIdent("IO") RBrace Eq Ident("g") LParen Int(IntLit { value: 1, suffix: None }) RParen VSemi Fn Ident("use_pure") LParen Ident("h") Colon Forall Ident("e0") Dot LParen KwInt RParen Arrow KwInt Bang LBrace Bar Ident("e0") RBrace RParen Colon KwInt Bang LBrace UIdent("IO") RBrace Eq Ident("apply_io") LParen Ident("h") RParen VSemi Fn Ident("call_poly") LParen Ident("h") Colon Forall Ident("e0") Dot LParen LParen KwInt RParen Arrow KwInt Bang LBrace Bar Ident("amb") RBrace RParen Arrow KwInt Bang LBrace Bar Ident("e0") RBrace Comma Ident("f") RParen Eq Ident("h") LParen Ident("f") RParen VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("use_pure") LParen Lambda LParen Ident("x") RParen Arrow Ident("x") Plus Int(IntLit { value: 41, suffix: None }) RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "apply_io",
            params: [
                Param {
                    name: "g",
                    ty: Some(
                        Fun(
                            [
                                Int,
                            ],
                            Cons(
                                [
                                    EffLabel {
                                        name: "IO",
                                        args: [],
                                    },
                                ],
                                None,
                            ),
                            Int,
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "IO",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "g",
                        ),
                        span: 200..201,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 202..203,
                        },
                    ],
                ),
                span: 200..204,
            },
            wheres: [],
            span: 148..204,
        },
        Decl {
            name: "use_pure",
            params: [
                Param {
                    name: "h",
                    ty: Some(
                        Forall(
                            [
                                "e0",
                            ],
                            Fun(
                                [
                                    Int,
                                ],
                                Cons(
                                    [],
                                    Some(
                                        "e0",
                                    ),
                                ),
                                Int,
                            ),
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "IO",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "apply_io",
                        ),
                        span: 271..279,
                    },
                    [
                        Spanned {
                            node: Var(
                                "h",
                            ),
                            span: 280..281,
                        },
                    ],
                ),
                span: 271..282,
            },
            wheres: [],
            span: 206..282,
        },
        Decl {
            name: "call_poly",
            params: [
                Param {
                    name: "h",
                    ty: Some(
                        Forall(
                            [
                                "e0",
                            ],
                            Fun(
                                [
                                    Fun(
                                        [
                                            Int,
                                        ],
                                        Cons(
                                            [],
                                            Some(
                                                "amb",
                                            ),
                                        ),
                                        Int,
                                    ),
                                ],
                                Cons(
                                    [],
                                    Some(
                                        "e0",
                                    ),
                                ),
                                Int,
                            ),
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
                Param {
                    name: "f",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "h",
                        ),
                        span: 359..360,
                    },
                    [
                        Spanned {
                            node: Var(
                                "f",
                            ),
                            span: 361..362,
                        },
                    ],
                ),
                span: 359..363,
            },
            wheres: [],
            span: 284..363,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 377..384,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "use_pure",
                                    ),
                                    span: 385..393,
                                },
                                [
                                    Spanned {
                                        node: Lam(
                                            [
                                                Param {
                                                    name: "x",
                                                    ty: None,
                                                    borrow: false,
                                                    default: None,
                                                },
                                            ],
                                            Spanned {
                                                node: Bin(
                                                    Add,
                                                    Spanned {
                                                        node: Var(
                                                            "x",
                                                        ),
                                                        span: 402..403,
                                                    },
                                                    Spanned {
                                                        node: Int(
                                                            IntLit {
                                                                value: 41,
                                                                suffix: None,
                                                            },
                                                        ),
                                                        span: 406..408,
                                                    },
                                                ),
                                                span: 402..408,
                                            },
                                        ),
                                        span: 394..408,
                                    },
                                ],
                            ),
                            span: 385..409,
                        },
                    ],
                ),
                span: 377..410,
            },
            wheres: [],
            span: 365..410,
        },
    ],
}

== types ==
apply_io : ((Int) -> Int ! {IO}) -> Int ! {IO}
use_pure : (forall e0. (Int) -> Int ! {e0}) -> Int ! {IO}
call_poly : forall e1. (forall e0. ((Int) -> Int ! {e1}) -> Int ! {e0}, (Int) -> Int ! {e1}) -> Int
main : () -> Unit ! {IO}

== core (cbpv) ==
fn apply_io(g) =
  return 1 to t@0
  return g to t@1
  (force t@1)(t@0)
fn use_pure(h) =
  return h to t@2
  apply_io(t@2)
fn call_poly(h, f) =
  return f to t@3
  return h to t@4
  (force t@4)(t@3)
fn main() =
  thunk { \x.
    return x to t@5
    return 41 to t@6
    t@5 + t@6
  } to t@7
  use_pure(t@7) to t@8
  print t@8 to t@9
  print_nl

== fbip (rc) ==
fn apply_io(g) =
  return 1 to t@0
  return g to t@1
  (force t@1)(t@0)
fn use_pure(h) =
  return h to t@2
  apply_io(t@2)
fn call_poly(h, f) =
  return f to t@3
  return h to t@4
  (force t@4)(t@3)
fn main() =
  thunk { \x.
    return x to t@5
    return 41 to t@6
    t@5 + t@6
  } to t@7
  use_pure(t@7) to t@8
  print t@8 to t@9
  drop t@9
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [1010 x i8] c"scheme  prism-core-hash-v2\0Abundle  a5fd66bf47aba568cace748f2f01888699e79cc6e28418e6e75e10689e23abd3\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:a5fd66bf47aba568cace748f2f01888699e79cc6e28418e6e75e10689e23abd3\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_apply_io  583cce27692a6243a6e93c99e4c31206ec5b5961058d94a9204c1f402795ead0  apply_io\0Afn      prismfn_call_poly  2f6af4859e63091b8c929055d2b5872a8625caf7b7dfaaa74d56f0a921d594d4  call_poly\0Afn      prismfn_main  716ff34eee0cc6d2a9a5ccfd65dbc0f753ba2606f5c6c2b82cfab1312d43f43d  main\0Afn      prismfn_use_pure  5912aa8066f3bd684170054e675507a98a7123b5813e4a36dc833fb86ce8cfe5  use_pure\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [1045 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  a5fd66bf47aba568cace748f2f01888699e79cc6e28418e6e75e10689e23abd3\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:a5fd66bf47aba568cace748f2f01888699e79cc6e28418e6e75e10689e23abd3\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_apply_io 583cce27692a6243a6e93c99e4c31206ec5b5961058d94a9204c1f402795ead0 apply_io arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_main 716ff34eee0cc6d2a9a5ccfd65dbc0f753ba2606f5c6c2b82cfab1312d43f43d main arity 0 slots abi-word[]\0Astate prismfn_use_pure 5912aa8066f3bd684170054e675507a98a7123b5813e4a36dc833fb86ce8cfe5 use_pure arity 1 slots abi-word[arg0=%a0:word]\0A\00", section ",.prism_kont", align 1
@.kont_symbol2 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash2 = private constant [65 x i8] c"716ff34eee0cc6d2a9a5ccfd65dbc0f753ba2606f5c6c2b82cfab1312d43f43d\00"
@.kont_name2 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol2, ptr @.kont_hash2, ptr @.kont_name2 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call ptr @prism_alloc(i64 0)
  %t2 = getelementptr inbounds i8, ptr %t1, i64 8
  store i64 4180332117194187166, ptr %t2, align 8
  %t4 = ptrtoint ptr %t1 to i64
  %t6 = call i64 @prismap_1(i64 %t4, i64 3)
  call void @prism_rc_dec(i64 %t4)
  call void @prism_print_int(i64 %t6)
  call void @prism_rc_dec(i64 %t6)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare ptr @prism_alloc(i64) #0

; Function Attrs: nounwind
define i64 @prismap_1(i64 %_clos, i64 %_a0) #0 {
entry:
  %_cp = inttoptr i64 %_clos to ptr
  %_tp = getelementptr inbounds i8, ptr %_cp, i64 8
  %_tag = load i64, ptr %_tp, align 8
  switch i64 %_tag, label %_dead [
    i64 4180332117194187166, label %_lam4180332117194187166
  ]

_lam4180332117194187166:                          ; preds = %entry
  %_r4180332117194187166 = call i64 @prismlam_4180332117194187166(i64 %_a0)
  br label %_merge

_dead:                                            ; preds = %entry
  call void @prism_apply_error()
  unreachable

_merge:                                           ; preds = %_lam4180332117194187166
  %_result = phi i64 [ %_r4180332117194187166, %_lam4180332117194187166 ]
  ret i64 %_result
}

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

; Function Attrs: nounwind
define i64 @prismlam_4180332117194187166(i64 %_p0) #0 {
entry:
  %t1 = and i64 %_p0, 83
  %t3 = and i64 %t1, 1
  %t4 = icmp eq i64 %t3, 1
  br i1 %t4, label %b0, label %b1

b0:                                               ; preds = %entry
  %t6 = ashr i64 %_p0, 1
  %t9 = add i64 %t6, 41
  %t11 = shl i64 %t9, 1
  %t12 = ashr i64 %t11, 1
  %t13 = icmp eq i64 %t12, %t9
  br i1 %t13, label %b3, label %b1

b1:                                               ; preds = %b0, %entry
  %t15 = call i64 @prism_rt_int_add(i64 %_p0, i64 83)
  br label %b2

b3:                                               ; preds = %b0
  %t14 = or i64 %t11, 1
  br label %b2

b2:                                               ; preds = %b1, %b3
  %t16 = phi i64 [ %t14, %b3 ], [ %t15, %b1 ]
  call void @prism_rc_dec(i64 %_p0)
  call void @prism_rc_dec(i64 83)
  ret i64 %t16
}

; Function Attrs: nounwind
declare i64 @prism_rt_int_add(i64, i64) #0

; Function Attrs: nounwind
declare void @prism_apply_error() #0

attributes #0 = { nounwind }

== run ==
output: [42]
result: ()
